<resources>

    <string name="app_name">BierApp</string>
    <string name="menu_settings">Instelllingen</string>
    
    <string name="menu_add_guest">Gast Toevoegen</string>
    <string name="menu_delete_guest">Gast Verwijderen</string>
    
    <string name="menu_show_hosts">Host(s) weergeven</string>
    
    <string name="menu_show_guests">Gasten</string>
    <string name="menu_transactions">Transacties</string>
    <string name="menu_refresh">Vernieuwen</string>
    
    <string name="menu_clear_transaction_items">Transactie-items wissen</string>
    <string name="menu_undo_transaction">Transactie ongedaan maken</string>
    
    <string name="menu_add_transaction">Transactie toevoegen</string>
    
    <string name="menu_purchase_confirm">Consumeren</string>
    <string name="menu_purchase_show">Weergeven</string>
    <string name="menu_purchase_cancel">Wissen</string>
    <string name="kies_een_gast">Kies een gast</string>
    <string name="kies_de_host_s_">Kies de host(s)</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="gast_niet_toegevoegd_omdat_er_geen_hosts_geselecteerd_zijn">Gast niet toegevoegd omdat er geen hosts geselecteerd zijn.</string>
    <string name="annuleren">Annuleren</string>
    <string name="s_als_gast_toegevoegd">%s als gast toegevoegd.</string>
    <string name="weet_je_zeker_dat_je_s_wilt_verwijderen">Weet je zeker dat je %s wilt verwijderen?</string>
    <string name="s_is_verwijderd">%s is verwijderd."</string>
    <string name="transactie_items_voor_s_gewist">Transactie-items voor %s gewist.</string>
    <string name="er_is_een_huidige_transactie_gaande_die_gewist_zal_worden_wil_je_doorgaan">Er is een huidige transactie gaande die gewist zal worden. Wil je doorgaan?</string>
    <string name="vernieuwen">Vernieuwen</string>
    <string name="transactie_gewist">Transactie gewist</string>
    <string name="d_producten">%d producten</string>
    <string name="verkoop_vanaf_s">Verkoop vanaf %s</string>
    <string name="transactiesamenvatting">Transactiesamenvatting</string>
    <string name="gegevens_herladen">Gegevens herladen</string>
    <string name="sluiten">Sluiten</string>
    <string name="data_vernieuwd">Data vernieuwd</string>
    <string name="transactie_versturen">Transactie versturen</string>
    <string name="transactie_succesvol_verzonden">Transactie succesvol verzonden!</string>
    <string name="opslaan_van_transactie_is_mislukt_probeer_het_nogmaals">Opslaan van transactie is mislukt. Probeer het nogmaals.</string>
    <string name="geen_internetverbinding_probeer_het_nogmaals">Geen internetverbinding. Probeer het nogmaals.</string>
    <string name="connectiefout">Connectiefout</string>
    <string name="transactiefout">Transactiefout</string>
    <string name="authenticatie_met_de_server_is_mislukt_de_applicatie_moet_opnieuw_gekoppeld_worden">Authenticatie met de server is mislukt. De applicatie moet opnieuw gekoppeld worden.</string>
    <string name="authenticatiefout">Authenticatiefout</string>
    <string name="toon_transactiesamenvatting_na_opslaan">Toon transactiesamenvatting na opslaan.</string>
    <string name="transacties">Transacties</string>
    <string name="resumeerwaarschuwing">Resumeerwaarschuwing</string>
    <string name="toon_waarschuwing_by_het_resumeren_van_een_oude_transactie">Toon waarschuwing by het resumeren van een oude transactie</string>
    <string name="overig">Overig</string>
    <string name="website">Website</string>
    <string name="bezoek_website_van_beterlijst">Bezoek website van Beterlijst</string>
    <string name="gasten_automatisch_verwijderen">Gasten automatisch verwijderen</string>
    <string name="automatisch_gasten_verwijderen_uit_overzicht_na_een_bepaalde_tijd">Automatisch gasten verwijderen uit overzicht na een bepaalde tijd.</string>
    <string name="gasten">Gasten</string>
    <string name="resumeertimeout">Resumeertimeout</string>
    <string name="selecteer_timeout">Selecteer timeout</string>
    <string name="verwijdertimeout">Verwijdertimeout</string>
    <string name="transactie_resumeren">Transactie resumeren</string>
    <string formatted="false" name="let_op_er_is_op_dit_moment_een_transactie_gestart_die_aangemaakt_is_op_s_om_s_uur">Let op: er wordt een transactie geresumeerd die is aangemaakt op %s om %s uur!</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="product">Product</string>
    <string name="product_logo">Product logo</string>
    <string name="number_10">10</string>
    <string name="application_logo">Application logo</string>
    <string name="transaction_description">Transactie-omschrijving</string>
    <string name="menu_delete">Verwijderen</string>
    <string name="menu_save">Opslaan</string>
    <string name="add">Toevoegen</string>
    <string name="menu_edit_transaction_item">Transactie-item aanpassen</string>
    <string name="menu_delete_transaction_item">Transactie-item verwijderen</string>
    <string name="edit">Aanpassen</string>
    <string name="select_hint">(Selecteren)</string>
    <string name="periode_van_overzicht">Periode van overzicht</string>
    <string name="toon_overzicht">Toon overzicht</string>
    <string name="overzicht">Overzicht</string>
    <string name="selecteer_periode">Selecteer periode</string>
</resources>