<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory 
        android:title="@string/transacties" >
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="transaction_post_save_summary"
            android:summary="@string/toon_transactiesamenvatting_na_opslaan"
            android:title="@string/transactiesamenvatting" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="transaction_warn_resume"
            android:summary="@string/toon_waarschuwing_by_het_resumeren_van_een_oude_transactie"
            android:title="@string/resumeerwaarschuwing" />

        <ListPreference
            android:defaultValue="3600"
            android:dependency="transaction_warn_resume"
            android:entries="@array/preference_transaction_timeouts"
            android:entryValues="@array/preference_transaction_timeouts_values"
            android:key="transaction_warn_resume_timeout"
            android:dialogTitle="@string/selecteer_timeout"
            android:title="@string/resumeertimeout" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/gasten" >
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="guest_auto_remove"
            android:summary="@string/gasten_automatisch_verwijderen"
            android:title="@string/automatisch_gasten_verwijderen_uit_overzicht_na_een_bepaalde_tijd" />

        <ListPreference
            android:defaultValue="43200"
            android:dependency="guest_auto_remove"
            android:entries="@array/preference_guest_timeouts"
            android:entryValues="@array/preference_guest_timeouts_values"
            android:key="guest_auto_remove_timeout"
			android:dialogTitle="@string/selecteer_timeout"
            android:title="@string/verwijdertimeout" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/overig" >
        
        <Preference 
            android:title="@string/website"
            android:summary="@string/bezoek_website_van_beterlijst" >
            
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.beterlijst.nl" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>