<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_show_guests" android:title="@string/menu_show_guests"></item>
    <item android:id="@+id/menu_transactions" android:title="@string/menu_transactions"></item>
    <item android:id="@+id/menu_refresh" android:title="@string/menu_refresh"></item>
    <item android:id="@+id/menu_settings" android:title="@string/menu_settings"></item>
    
    <item android:id="@+id/menu_undo"
        android:icon="@drawable/ic_menu_undo"
        android:showAsAction="always"
        android:visible="true"
        android:title="">
    </item>
    
    <item android:id="@+id/menu_purchase"
        android:icon="@drawable/ic_menu_purchase" 
        android:showAsAction="always|withText"
        android:visible="false">
        
        <menu>
            <item android:id="@+id/menu_purchase_confirm"
				android:title="@string/menu_purchase_confirm" />
            
            <item android:id="@+id/menu_purchase_show"
				android:title="@string/menu_purchase_show" />
            
            <item android:id="@+id/menu_purchase_cancel"
				android:title="@string/menu_purchase_cancel" />
        </menu>
    </item>
</menu>